--- a/sql_server/views/main.ejs
+++ b/sql_server/views/main.ejs
@@ -10,9 +10,10 @@
     <h1>Main Page</h1>
     <!-- 하이퍼링크 생성 회원 정보 수정 -->
     <!-- /update -->
-
+    <a href="/update">회원 정보 수정</a>
     <!-- 하이퍼링크 생성 회원 탈퇴 -->
     <!-- /delete -->
+    <a href="/delete">회원 탈퇴</a>
 
 
 
