--- a/contract_server/views/index.ejs
+++ b/contract_server/views/index.ejs
@@ -17,10 +17,10 @@
     <form action="/login" method="post">
         <!-- ID를 입력하는 공간 -->
         <label>ID</label>
-        <input type="text" name="input_id"><br>
+        <input type="text" name="input_id" required><br>
         <!-- PASSWORD를 입력하는 공간 -->
         <label>Password</label>
-        <input type="password" name="input_pass"><br>
+        <input type="password" name="input_pass" required><br>
         <input type="submit" value="로그인">
     </form>
     <button onclick="signup()">회원가입</button>
