--- a/token_trade/views/trans_token.ejs
+++ b/token_trade/views/trans_token.ejs
@@ -17,5 +17,17 @@
         <input type="text" name = "_token"><br>
         <input type="submit" value="토큰 전송">
     </form>
+
+    <h1>transferfrom</h1>
+    <form action="/trans_token3" method="post">
+        <label>토큰 주소</label>
+        <input type="text" name="_token"><br>
+        <label>보내는 사람의 private key</label>
+        <input type="text" name="_private"><br>
+        <label>토큰 수량</label>
+        <input type="number" name="_amount"><br>
+        <input type="submit" value="토큰 전송">
+    </form>
+
 </body>
 </html>
