--- a/sample_server/views/main.ejs
+++ b/sample_server/views/main.ejs
@@ -9,6 +9,6 @@
 <body>
     <h1>main page</h1>
     <a href = '/survey'>설문 조사 등록</a><br>
-    <a href = '/survey_list'>설문 리스트 보기</a>
+    <a href = '/survey/list'>설문 리스트 보기</a>
 </body>
 </html>
